opam-version: "2.0"

name: "ppx_deriving_zipper"
version: "0.1"
tags: [ "syntax" ]
license: "LGPL3"
synopsis: "A PPX deriver for zippers"
description: """
A PPX deriver for zippers.
"""

maintainer: "Niols <niols@niols.fr>"
authors: [
  "Kerl <kerl@wkerl.me>"
  "Niols <niols@niols.fr>"
]

homepage: "https://github.com/LesBoloss-es/ppx_deriving_zipper"
bug-reports: "https://github.com/LesBoloss-es/ppx_deriving_zipper/issues"
dev-repo: "git://github.com/LesBoloss-es/ppx_deriving_zipper.git"

depends: [
  "dune"       {build}
  "ocaml"      {build}
  "ppx_deriving"
  "ppx_tools"
  "ppxfind"    {build}
]

build: ["dune" "build" "-p" name "-j" jobs]
